--- a/week12/week12.html
+++ b/week12/week12.html
@@ -7,7 +7,7 @@
 
         function countClicks(element) {
           counter = counter + 1;
-    var output = 'The link was pressed ' + counter + ' times.';
+    var output = 'The link was pressedd ' + counter + ' times.';
     element.innerHTML = output;
         }
     </script>
