--- a/Assignment_3_Webpage/webpage.html
+++ b/Assignment_3_Webpage/webpage.html
@@ -1,9 +1,52 @@
+<!DOCTYPE html>
 <html>
     <head>
-        this is my webpage
+        <title> cloud computing </title>
+<link rel="stylesheet" href="style.css">
+<script>
 
-        <body>
-webpage 
-        </body>
+</script>
     </head>
+    <body>
+       <header>
+        <h1>Cloud computing</h1>
+        <button onclick=""toggle theme</button>
+       </header>
+            <ul>
+                 <li><a href="#">Home</a></li>
+                 <li><a href="#">Cloud types</a></li>
+                 <li><a href="#">services</a></li>
+                 <li><a href="#">advantages</a></li>
+                 <li><a href="#">disadvantages</a></li>
+            </ul>
+            <form>
+                <input type="text" name="user_name" placeholder="Thota amruta babu!"
+                <button type="submit">Apply!</button>
+            </form>
+             </nav>
+             <main>
+                <article>
+                    <h2>deployment methods</h2>
+                    <p>They are so many types of deployment methods and they are private public and hybrid clouds <b>They are owner managed and scalable</b><b>They are very relaible and securely connected over the internet </b>They are very cost efficient and cost reliable.</p>
+                    <h3>future of cloud</h3>
+                    <p>people are so thinkable and dependent on cloud technology.<b>Next few years we will find a rapid change in cloud</b> The perspective will shift markedly by 2027 soon.</p>
+                    <h3>Trends and Predictions</h3>
+                    <p>Its more closer to public access and helps in distributing workload over local devices like laptops and mobiles.<b>Too much reliablity can disintegrate human analytical thinking"></b> Large number of organisations to rise their market from 76% to 85% by end of 2024.</p>
+                </article>
+                <aside>
+                    <h2>Related</h2>
+                    <ul>
+                        <li><a href="#">storages devices</a></li>
+                        <li><a href="#">applications</a></li>
+                        <li><a href="#">private cloud</a></li>
+                        <li><a href="#">hybrid cpmputing</a></li>
+                        <li><a href="#">public cloud</a></li>
+                    </ul>
+                </aside>
+             </main>
+             <footer>
+                <p>@copy right 2023 by nobody. All rights reversed.</p>
+             </footer>
+        
+    </body>
 </html>
